// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Confirm Modal Confirm modal displays props content 1`] = `
<v-dialog-stub opendelay="0" closedelay="0" value="true" contentclass="" maxwidth="none" origin="center center" retainfocus="true" transition="dialog-transition" width="600">
  <div class="confirm-modal-wrapper">
    <div class="confirm-modal-body px-6">
      <!---->
      <div class="black--text text--darken-4 text-h3 pt-3">
        Title
      </div>
      <div class="black--text text--darken-4 text-h3 mt-n2">
        Subtitle
      </div>
      <div class="black--text text--darken-4 text-h6 pt-6">
        Body
      </div>
    </div>
    <div class="confirm-modal-footer">
      <huxbutton-stub variant="white" istile="true" size="large" height="40" boxshadow="true"><span class="primary--text">Nevermind!</span></huxbutton-stub>
      <huxbutton-stub variant="primary" istile="true" size="large" height="40" boxshadow="true">
        Button
      </huxbutton-stub>
    </div>
  </div>
</v-dialog-stub>
`;

exports[`Tests Confirm Modal Confirm modal displays slots content 1`] = `
<v-dialog-stub opendelay="0" closedelay="0" value="true" contentclass="" maxwidth="none" origin="center center" retainfocus="true" transition="dialog-transition" width="600">
  <div class="confirm-modal-wrapper">
    <div class="confirm-modal-body px-6">
      <!---->
      <div>Title</div>
      <!---->
      <div>Body</div>
    </div>
    <div class="confirm-modal-footer">
      <div>footer</div>
    </div>
  </div>
</v-dialog-stub>
`;
